--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "moment": "^2.29.4",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.2",
     "vue-scrollto": "^2.20.0",
     "vuex": "^4.0.2"
